Event && base helper benchmark added

--- a/src/engine/benchmark/CMakeLists.txt
+++ b/src/engine/benchmark/CMakeLists.txt
@@ -39,3 +39,5 @@ add_subdirectory(regex)
 add_subdirectory(hlp)
 add_subdirectory(kvdb)
 add_subdirectory(logicExpression)
+add_subdirectory(base)
+add_subdirectory(helpersFunctions)
