--- a/src/engine/source/builder/CMakeLists.txt
+++ b/src/engine/source/builder/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(builders OBJECT
   builders/stageBuilderMap.cpp
   builders/stageBuilderNormalize.cpp
   builders/stageBuilderOutputs.cpp
+  builders/stageDestination.cpp
   builders/stageBuilderParse.cpp
   definitions.cpp
   environment.cpp
