Base router added, test and benchmarks

--- a/src/engine/benchmark/CMakeLists.txt
+++ b/src/engine/benchmark/CMakeLists.txt
@@ -41,3 +41,4 @@ add_subdirectory(kvdb)
 add_subdirectory(logicExpression)
 add_subdirectory(base)
 add_subdirectory(helpersFunctions)
+add_subdirectory(router)
