--- a/src/engine/source/router/CMakeLists.txt
+++ b/src/engine/source/router/CMakeLists.txt
@@ -1,20 +1,21 @@
 add_library(router STATIC
     src/runtimeEnvironment.cpp
     src/environmentManager.cpp
+    src/router.cpp
 )
 
-target_link_libraries(router PRIVATE
+target_link_libraries(router
+    PRIVATE
+    builders
     base
     json
-    builders
     rxbk
 )
 
-target_include_directories(router PUBLIC
+target_include_directories(router
+    PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-target_include_directories(router PRIVATE
+    PRIVATE
     ${CameronQueue_SOURCE_DIR}
     ${CMAKE_CURRENT_LIST_DIR}/src
 )
