Change runtimeEnvironment, delete thread, queue and add method topush envent

--- a/src/engine/source/router/CMakeLists.txt
+++ b/src/engine/source/router/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(router STATIC
     src/runtimeEnvironment.cpp
-    src/environmentManager.cpp
+#    src/environmentManager.cpp
     src/router.cpp
 )
 
