Refactored CMDS for clarity and modularity

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -151,6 +151,7 @@ add_subdirectory(${ENGINE_SOURCE_DIR}/wdb)
 add_subdirectory(${ENGINE_SOURCE_DIR}/cmds)
 add_subdirectory(${ENGINE_SOURCE_DIR}/store)
 add_subdirectory(${ENGINE_SOURCE_DIR}/router)
+add_subdirectory(${ENGINE_SOURCE_DIR}/conf)
 
 #TODO isolate rxcpp
 target_link_libraries(main base cmds api)
