--- a/src/engine/test/CMakeLists.txt
+++ b/src/engine/test/CMakeLists.txt
@@ -50,6 +50,5 @@ add_subdirectory(${TEST_SOURCE_DIR}/router)
 add_subdirectory(${TEST_SOURCE_DIR}/logicExpression)
 add_subdirectory(${TEST_SOURCE_DIR}/rxbk)
 add_subdirectory(${TEST_SOURCE_DIR}/wdb)
-# add_subdirectory(${TEST_SOURCE_DIR}/server)
 add_subdirectory(${TEST_SOURCE_DIR}/store)
-# add_subdirectory(${TEST_SOURCE_DIR}/zz_cpp_test)
+add_subdirectory(${TEST_SOURCE_DIR}/conf)
