--- a/src/engine/test/source/cmds/CMakeLists.txt
+++ b/src/engine/test/source/cmds/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 add_executable(cmds_test
     stackExecutor_test.cpp
 )
@@ -9,3 +10,13 @@ target_include_directories(cmds_test
 
 target_link_libraries(cmds_test gtest_main base cmds)
 gtest_discover_tests(cmds_test)
+
+add_executable(cli11_test
+    cli11_test.cpp
+)
+target_include_directories(cli11_test
+    PUBLIC
+    ${CLI11_SOURCE_DIR}/include
+)
+target_link_libraries(cli11_test gtest_main )
+gtest_discover_tests(cli11_test)
