--- a/src/engine/ruleset/decoders/wazuh-agent/fim/fim.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/fim/fim.yml
@@ -8,7 +8,7 @@ metadata:
     module: wazuh-agent/fim/fim
     title: FIM Decoder event
     description: >
-        Decodes dbsync messages
+        Decodes fim messages
     compatibility: >
         This decoder has been tested on Wazuh version 4.3.
     author:
