--- a/src/engine/ruleset/environments/wazuh-environment.yml
+++ b/src/engine/ruleset/environments/wazuh-environment.yml
@@ -9,6 +9,7 @@ decoders:
   - decoder/queue-dbsync/0
   - decoder/queue-localfile/0
   - decoder/queue-rootcheck/0
+  - decoder/queue-ciscat/0
 
   # General format decoders
   - decoder/json/0
@@ -20,6 +21,7 @@ decoders:
   - decoder/fim-scan/0
   - decoder/rootcheck/0
   - decoder/sca/0
+  - decoder/ciscat/0
   - decoder/syscollector-base/0
   - decoder/syscollector-dbsync-network-protocol/0
   - decoder/syscollector-dbsync-osinfo/0
