Add base integration for Router module
- Add base router module
- Move threads from env manager to router
- Add catalog add, get, post, del routes in catalog
- Validate routes

--- a/src/engine/source/builder/CMakeLists.txt
+++ b/src/engine/source/builder/CMakeLists.txt
@@ -50,10 +50,10 @@ add_library(builders OBJECT
   builders/stageBuilderMap.cpp
   builders/stageBuilderNormalize.cpp
   builders/stageBuilderOutputs.cpp
-  builders/stageDestination.cpp
   builders/stageBuilderParse.cpp
   definitions.cpp
   environment.cpp
+  route.cpp
   registry.cpp
 )
 
