--- a/src/engine/ruleset/decoders/aws/elb/aws-elb.yml
+++ b/src/engine/ruleset/decoders/aws/elb/aws-elb.yml
@@ -68,17 +68,17 @@ definitions:
 parse:
   logpar:
     # HTTP (Classic ELB)
-    # 2019-10-14T12:00:20.694172Z filebeat-aws-elb-test 175.16.199.1:54106 10.0.1.185:80 0.000043 0.000785 0.000023 200 200 0 612 "GET http://18.194.223.56:80/ HTTP/1.1" "Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36" - -
+    # 2019-10-14T12:00:20.694172Z wazuh-aws-elb-test 175.16.150.1:54127 10.0.1.185:80 0.000043 0.000785 0.000023 200 200 0 612 "GET http://18.194.223.56:80/ HTTP/1.1" "Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36" - -
     - event.original: $ELBHTTPLOG
-    # 2019-10-14T12:00:20.694172Z filebeat-aws-elb-test 175.16.199.1:54106 - 0.000043 0.000785 0.000023 200 200 0 612 "GET http://18.194.223.56:80/ HTTP/1.1" "Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36" - -
+    # 2019-10-14T12:00:20.694172Z wazuh-aws-elb-test 175.16.150.1:54127 - 0.000043 0.000785 0.000023 200 200 0 612 "GET http://18.194.223.56:80/ HTTP/1.1" "Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36" - -
     - event.original: $NO_BE_ELBHTTPLOG
 
     # TCP (Classic ELB)
-    # 2019-10-17T13:22:51.758784Z filebeat-aws-elb-test-elb 81.2.69.193:51600 10.0.0.47:80 0.000943 0.00001 0.000015 - - 134 859 "- - - " "-" - -
+    # 2019-10-17T13:22:51.758784Z wazuh-aws-elb-test-elb 81.2.69.193:51600 10.0.0.47:80 0.000943 0.00001 0.000015 - - 134 859 "- - - " "-" - -
     - event.original: $ELBTCPLOG
 
     # HTTP from Application Load Balancers (v2 Load Balancers)
-    # http 2019-10-11T15:55:11.987940Z app/filebeat-aws-elb-test/c86a326e7dc14222 81.2.69.193:37856 10.0.0.192:80 0.000 0.001 0.000 200 200 125 859 "GET http://filebeat-aws-elb-test-12030537.eu-central-1.elb.amazonaws.com:80/ HTTP/1.1" "curl/7.58.0" - - arn:aws:elasticloadbalancing:eu-central-1:627959692251:targetgroup/test-lb-instances/8f04c4fe71f5f794 "Root=1-5da0a5df-7c958e828ff43b63d0e0fac4" "-" "-" 0 2019-10-11T15:55:11.987000Z "forward" "-" "-"
+    # http 2019-10-11T15:55:11.987940Z app/wazuh-aws-elb-test/c86a326e7dc14222 81.2.69.193:37856 10.0.0.192:80 0.000 0.001 0.000 200 200 125 859 "GET http://wazuh-aws-elb-test-12030537.eu-central-1.elb.amazonaws.com:80/ HTTP/1.1" "curl/7.58.0" - - arn:aws:elasticloadbalancing:eu-central-1:627959692251:targetgroup/test-lb-instances/8f04c4fe71f5f794 "Root=1-5da0a5df-7c958e828ff43b63d0e0fac4" "-" "-" 0 2019-10-11T15:55:11.987000Z "forward" "-" "-"
     - event.original: >-
         $ELBV2TYPE
         $ELBHTTPLOG
@@ -91,7 +91,7 @@ parse:
         <~/literal/"-">?<~tmp.actions_executed/quoted>
         "<~/literal/->?<aws.elb.redirect_url>"
         "<~/literal/->?<aws.elb.error.reason>"(? <~tmp.http_v2_optional>)
-    # http 2018-07-02T22:23:00.186641Z app/my-loadbalancer/50dc6c495c0c9188 192.168.131.39:2817 - 0.000 0.001 0.000 200 200 34 366 "GET http://www.example.com:80/ HTTP/1.1" "curl/7.46.0" - - arn:aws:elasticloadbalancing:us-east-2:123456789012:targetgroup/my-targets/73e2d6bc24d8a067 "Root=1-58337262-36d228ad5d99923122bbe354" "-" "-" 0 2018-07-02T22:22:48.364000Z "forward" "-" "-" "123" "1234" "clasif" "reason"
+    # http 2018-07-02T22:23:00.186641Z app/my-loadbalancer/50dc6c490c0c9190 192.168.131.39:2817 - 0.000 0.001 0.000 200 200 34 366 "GET http://www.example.com:80/ HTTP/1.1" "curl/7.46.0" - - arn:aws:elasticloadbalancing:us-east-2:123456789012:targetgroup/my-targets/73e2d6bc24d8a067 "Root=1-58337262-36d228ad5d99923122bbe354" "-" "-" 0 2018-07-02T22:22:48.364000Z "forward" "-" "-" "123" "1234" "clasif" "reason"
     - event.original: >-
         $ELBV2TYPE
         $NO_BE_ELBHTTPLOG
@@ -106,7 +106,7 @@ parse:
         "<~/literal/->?<aws.elb.error.reason>"(? <~tmp.http_v2_optional>)
 
     # TCP from Network Load Balancers (v2 Load Balancers)
-    # tls 1.0 2018-12-20T02:59:40 net/my-network-loadbalancer/c6e77e28c25b2234 g3d4b5e8bb8464cd 89.160.20.112:51341 172.100.100.185:443 5 2 98 246 - arn:aws:acm:us-east-2:671290407336:certificate/2a108f19-aded-46b0-8493-c63eb1ef4a99 - ECDHE-RSA-AES128-SHA tlsv12 - my-network-loadbalancer-c6e77e28c25b2234.elb.us-east-2.amazonaws.com
+    # tls 1.0 2018-12-20T02:59:40 net/my-network-loadbalancer/c6e77e28c25b2234 g3d3b5e7bb4864cd 89.160.20.112:51341 172.100.100.185:443 5 2 98 246 - arn:aws:acm:us-east-2:671290407336:certificate/2a108f19-aded-46b0-8493-c63eb1ef4a99 - ECDHE-RSA-AES128-SHA tlsv12 - my-network-loadbalancer-c6e77e28c25b2234.elb.us-east-2.amazonaws.com
     - event.original: >-
         $ELBV2TYPE <?~version/float> $ELBTIMESTAMP
         $ELBNAME
