--- a/src/engine/ruleset/decoders/aws/cloudtrail/aws-cloudtrail.yml
+++ b/src/engine/ruleset/decoders/aws/cloudtrail/aws-cloudtrail.yml
@@ -2,11 +2,16 @@
 name: decoder/aws-cloudtrail/0
 
 metadata:
+  title: AWS Cloudtrail Decoder
   description: Decoder for AWS CloudTrail Logs
   references:
     - https://docs.aws.amazon.com/awscloudtrail/latest/userguide/cloudtrail-event-reference-record-contents.html
     - https://docs.aws.amazon.com/awscloudtrail/latest/userguide/cloudtrail-log-file-examples.html
   product.name: AWS CloudTrail
+  author:
+      name: Wazuh, Inc.
+      url: https://wazuh.com
+      date: 2023/01/18
 
 # Example of Wazuh's integration with AWS Cloudtrail log:
 # {"aws":{"source":"cloudtrail","eventVersion":"some-event-version","eventID":"some-event-id","eventTime":"2018-08-24T17:20:08Z","log_file":"some-log-file.json.gz","additionalEventData":{"MFAUsed":"No","LoginTo":"https://console.aws.amazon.com/console/home","MobileVersion":"No"},"eventType":"AwsConsoleSignIn","errorMessage":"Failed authentication","responseElements":{"ConsoleLogin":"Failure"},"awsRegion":"us-east-1","eventName":"ConsoleLogin","userIdentity":{"userName":"some-user-name","accessKeyId":"some-access-key","type":"IAMUser","principalId":"some-principal-id","accountId":"0303456"},"eventSource":"signin.amazonaws.com","userAgent":"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:61.0) Gecko/20100101 Firefox/61.0","sourceIPAddress":"7.222.123.101","recipientAccountId":"1020304050607080"},"integration":"aws"}
