Added CliConf module tests

--- a/src/engine/test/source/conf/CMakeLists.txt
+++ b/src/engine/test/source/conf/CMakeLists.txt
@@ -1,11 +1,5 @@
-add_executable(iconf_test
-    iconf_test.cpp
+add_executable(cliconf_test
+cliconf_test.cpp
 )
-target_link_libraries(iconf_test gtest_main conf::iconf)
-gtest_discover_tests(iconf_test)
-
-add_executable(conf_test
-    conf_test.cpp
-)
-target_link_libraries(conf_test gtest_main conf::cliconf)
-gtest_discover_tests(conf_test)
+target_link_libraries(cliconf_test gtest_main conf::cliconf)
+gtest_discover_tests(cliconf_test)
